--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script src="libraries/p5.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script> -->
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/p5.simplexNoise.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/kchapelier/poisson-disk-sampling@2.3.1/build/poisson-disk-sampling.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js">
     </script> 
+    
   </head>
 
   <body>
