--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
   </head>
 
   <body>
+    <script src="./probability_generators/numShapesGen.js"></script>
+    <script src="./probability_generators/densityGen.js"></script>
+    <script src="./probability_generators/is3DGen.js"></script>
+    <script src="./probability_generators/shapeFreqGen.js"></script>
+    <script src="./probability_generators/themeGen.js"></script>
+
+    <script src="./utils/drawShape.js"></script>
+    <script src="./utils/cdf.js"></script>
+    <script src="./utils/drawShape3D.js"></script>
+    <script src="./utils/drawTriangularPrism.js"></script>
+    <script src="./utils/getRand.js"></script>
+    <script src="./utils/lightingSetup.js"></script>
+    <script src="./utils/overlapsWithShapes.js"></script>
+    <script src="./utils/shuffleArray.js"></script>
+
     <script src="sketch.js"></script>
   </body>
 </html>
