feat: simplex noise parameters generator

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./probability_generators/is3DGen.js"></script>
     <script src="./probability_generators/shapeFreqGen.js"></script>
     <script src="./probability_generators/themeGen.js"></script>
+    <script src="./probability_generators/simplexNoiseParamGen.js"></script>
 
     <script src="./utils/drawShape.js"></script>
     <script src="./utils/cdf.js"></script>
