--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="./probability_generators/shapeFreqGen.js"></script>
     <script src="./probability_generators/themeGen.js"></script>
     <script src="./probability_generators/simplexNoiseParamGen.js"></script>
+    <script src="./probability_generators/shapeSizeGen.js"></script>
 
     <script src="./utils/drawShape.js"></script>
     <script src="./utils/cdf.js"></script>
